samples/_failures_safe/1761209262_145d21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41e593d6.c: In function ‘main’:
./samples/SAFE/__tmp_41e593d6.c:164:28: error: expected ‘)’ at end of input
  164 |         if (!graph_add_edge
      |            ~               ^
      |                            )
./samples/SAFE/__tmp_41e593d6.c:164:9: error: expected declaration or statement at end of input
  164 |         if (!graph_add_edge
      |         ^~
./samples/SAFE/__tmp_41e593d6.c:164:9: error: expected declaration or statement at end of input
